[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/tela_feedback.png" type="Texture" id=1]
[ext_resource path="res://Assets/space.jpg" type="Texture" id=2]
[ext_resource path="res://Scenes/Minigame/Spaceships.gd" type="Script" id=3]
[ext_resource path="res://Assets/buto_play_branco (1).png" type="Texture" id=5]
[ext_resource path="res://Assets/buto_play_rosa (1).png" type="Texture" id=6]
[ext_resource path="res://Scenes/Minigame/Spaceship.tscn" type="PackedScene" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Bgspace" type="Sprite" parent="."]
position = Vector2( 635.5, 323.5 )
scale = Vector2( 2.7, 2.7 )
texture = ExtResource( 2 )

[node name="Jogador" parent="." instance=ExtResource( 7 )]
position = Vector2( 601, 569 )

[node name="Tutorial" type="TextureRect" parent="."]
pause_mode = 2
process_priority = 2
margin_left = 277.0
margin_top = 122.0
margin_right = 997.0
margin_bottom = 535.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Button_Play" type="TextureButton" parent="Tutorial"]
margin_left = 312.0
margin_top = 293.0
margin_right = 391.0
margin_bottom = 366.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="Tutorial"]
margin_left = 64.0
margin_top = 64.0
margin_right = 430.0
margin_bottom = 197.0
rect_scale = Vector2( 1.6, 1.6 )
text = "SPACESHIPS

Tutorial: 
-Utilize as setinhas da esquerda e direita para se movimentar e espaço para atirar.
-Seu objetivo é destruir 12 naves.
-Não encoste nas naves e não deixe elas passarem.
-Você só tem 5 vidas!"
autowrap = true

[node name="posicoesSpawn" type="Node2D" parent="."]

[node name="spawn1" type="Position2D" parent="posicoesSpawn"]
position = Vector2( 253, 0 )

[node name="spawn2" type="Position2D" parent="posicoesSpawn"]
position = Vector2( 506, 0 )

[node name="spawn3" type="Position2D" parent="posicoesSpawn"]
position = Vector2( 759, 0 )

[node name="spawn4" type="Position2D" parent="posicoesSpawn"]
position = Vector2( 1012, 0 )

[node name="timerSpawn" type="Timer" parent="."]
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 9.0
margin_top = 19.0
margin_right = 265.0
margin_bottom = 135.0
color = Color( 0, 0, 0, 1 )

[node name="LabelVida" type="Label" parent="ColorRect"]
margin_left = -6.0
margin_top = 7.0
margin_right = 44.0
margin_bottom = 49.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="LabelPontuacao" type="Label" parent="ColorRect"]
margin_left = -5.0
margin_top = 71.0
margin_right = 35.0
margin_bottom = 85.0
rect_scale = Vector2( 2.5, 2.5 )

[connection signal="spawn_laser" from="Jogador" to="." method="_on_Jogador_spawn_laser"]
[connection signal="pressed" from="Tutorial/Button_Play" to="." method="_on_Button_Play_pressed"]
[connection signal="timeout" from="timerSpawn" to="." method="_on_timerSpawn_timeout"]
